--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ theme:
   palette:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      primary: red
+      primary: amber
       scheme: default 
       toggle:
         icon: material/weather-sunny
@@ -12,7 +12,7 @@ theme:
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
-      primary: red
+      primary: amber
       scheme: slate
       toggle:
         icon: material/weather-light
