--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ theme:
       primary: amber
       scheme: slate
       toggle:
-        icon: material/weather-light
+        icon: material/weather-dark
         name: Switch to dark mode
 markdown_extensions:
   - toc:
