--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ theme:
   palette:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
-      primary: amber
+      primary: indigo
       scheme: default 
       toggle:
         icon: material/weather-sunny
@@ -12,7 +12,7 @@ theme:
 
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
-      primary: amber
+      primary: indigo
       scheme: slate
       toggle:
         icon: material/weather-night
@@ -21,3 +21,5 @@ markdown_extensions:
   - toc:
       permalink: true
   - attr_list
+repo_url: https://github.com/vcherx/aws-saa-c03-guide
+repo_name: aws-saa-c03-guide
